# osquery-extensions

./: .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  Version.h.in
bcc_publisher/: CMakeLists.txt  README
bcc_publisher/probes/: CMakeLists.txt
bcc_publisher/probes/cmake/: probe_generator.cmake
bcc_publisher/probes/common/: definitions.h  helpers.h  utilities.h
bcc_publisher/probes/create_mknod_events/: create_mknod_events.c  create_mknod_events.h
bcc_publisher/probes/dup_close_events/: dup_close_events.c  dup_close_events.h
bcc_publisher/probes/exec_events/: exec_events.c  exec_events.h
bcc_publisher/probes/fd_events/: fd_events.c  fd_events.h
bcc_publisher/probes/fork_events/: fork_events.c  fork_events.h
bcc_publisher/probes/open_events/: open_events.c  open_events.h
bcc_publisher/probes/socket_fd_events/: socket_fd_events.c  socket_fd_events.h
bcc_publisher/src/: bccprocessevents.cpp  bccprocessevents.h  bccprocesseventsprogram.cpp  bccprocesseventsprogram.h  bccprocesseventsprogramtypes.h  bccprocesseventspublisher.cpp  bccprocesseventspublisher.h  bccprocesseventsservice.cpp  bccprocesseventsservice.h  dockertracker.cpp  dockertracker.h  globals.cpp  globals.h  main.cpp
bcc_publisher/utils/llvm-bpf/: CMakeLists.txt  README.md
ebpf/: CMakeLists.txt
ebpf/llvm-bpf/: .gitignore
ebpf/probes/: CMakeLists.txt
ebpf/probes/common/: api.h  defs.h
ebpf/probes/kprobe_group/: header.h  main.c
ebpf/src/: bcc_probe_generator.cpp  bcc_probe_generator.h  dockertracker.cpp  dockertracker.h  ebpfeventsource.cpp  ebpfeventsource.h  ebpfprobe.cpp  ebpfprobe.h  ebpfprobepollservice.cpp  ebpfprobepollservice.h  filedescriptortracker.cpp  filedescriptortracker.h  main.cpp  managed_probe_generator.cpp  managed_probe_generator.h  managedprobe.cpp  managedprobe.h  managedprobereaderservice.cpp  managedprobereaderservice.h  managedprobeservice.cpp  managedprobeservice.h  probe_reader_utils.cpp  probe_reader_utils.h  probeeventreassembler.cpp  probeeventreassembler.h  probereaderservice.cpp  probereaderservice.h  processeventspublisher.cpp  processeventspublisher.h  processeventssubscriber.cpp  processeventssubscriber.h  socketeventssubscriber.cpp  socketeventssubscriber.h
efigy/: CMakeLists.txt  README.md
efigy/src/: efigy.cpp  efigy.h  efigytable.cpp  efigytable.h  extension.cpp  extension.h  main.cpp  utils.h  utils.mm
firewall/: CMakeLists.txt  README.md
firewall/extutils/: CMakeLists.txt
firewall/extutils/include/trailofbits/: extutils.h  istatus.h
firewall/extutils/src/: extutils.cpp
firewall/firewall/: CMakeLists.txt
firewall/firewall/include/trailofbits/: ifirewall.h  istatus.h
firewall/firewall/linux/: firewall.cpp  firewall.h
firewall/firewall/linux/src/: firewall.cpp  firewall.h
firewall/firewall/macos/: firewall.cpp  firewall.h
firewall/firewall/macos/src/: firewall.cpp  firewall.h
firewall/firewall/macos/tests/: pf_firewall.cpp
firewall/firewall/windows/src/: firewall.cpp  firewall.h
firewall/firewall/windows/tests/: windows_firewall.cpp
firewall/hostsfile/: CMakeLists.txt
firewall/hostsfile/include/trailofbits/: ihostsfile.h
firewall/hostsfile/src/: hostsfile.cpp  hostsfile.h
firewall/hostsfile/tests/: hostsfile.cpp
firewall/src/: basetable.h  globals.cpp  globals.h  hostblacklist.cpp  hostblacklist.h  main.cpp  portblacklist.cpp  portblacklist.h  types.h
firewall/tables/: hostblacklist.h  portblacklist.cpp  portblacklist.h
firewall/tests/: hostblacklist.cpp
fwctl/: CMakeLists.txt  README.md
fwctl/src/: basetable.h  globals.cpp  globals.h  hostblacklist.cpp  hostblacklist.h  hostdenylist.cpp  hostdenylist.h  portblacklist.cpp  portblacklist.h  portdenylist.cpp  portdenylist.h
fwctl/tests/: hostdenylist.cpp
iptables/: CMakeLists.txt  README.md
iptables/src/: ip6tables_ext.cpp  ip6tables_ext.h  ip6tables_policies.cpp  ip6tables_policies.h  ip6tc.h  iptables_ext.cpp  iptables_ext.h  iptables_policies.cpp  iptables_policies.h  iptc.h  utils.cpp  utils.h  utils_compatible.h
iptables/test/: utils.cpp
libraries/extutils/: CMakeLists.txt
libraries/extutils/src/: extutils.cpp
libraries/firewall/: CMakeLists.txt
libraries/firewall/include/trailofbits/: ifirewall.h
libraries/firewall/linux/src/: firewall.cpp  firewall.h
libraries/hostsfile/: .platforms  CMakeLists.txt
libraries/hostsfile/src/: hostsfile.cpp  hostsfile.h
libraries/hostsfile/tests/: main.cpp
libraries/pubsub/: .platforms  CMakeLists.txt
libraries/pubsub/include/: baseeventpublisher.h  baseeventsubscriber.h  ieventpublisher.h  ieventsubscriber.h  publisherscheduler.h
libraries/pubsub/src/: configurationfile.cpp  eventbufferlibrary.cpp  publisherregistry.cpp  publisherscheduler.cpp  servicemanager.cpp  subscriberregistry.cpp
libraries/tsk_builtin/: .platforms  BUILD_NOTES  CMakeLists.txt
network_monitor/: CMakeLists.txt  README.md
network_monitor/src/: bufferreader.cpp  bufferreader.h  dnseventspublisher.cpp  dnseventspublisher.h  dnseventssubscriber.cpp  dnseventssubscriber.h  dnsrequest.cpp  dnsrequest.h  main.cpp  networkeventpublisher.cpp  networkeventpublisher.h  networkeventsubscriber.cpp  networkeventsubscriber.h  packet.cpp  packet.h  packetreader.cpp  packetreader.h  pcap_utils.cpp  pcap_utils.h  pcapreaderservice.cpp  pcapreaderservice.h
opt_dependencies/Fuzzer/: CMakeLists.txt
opt_dependencies/Pcap++/cmake_project/: CMakeLists.txt
opt_dependencies/bcc/: CMakeLists.txt
opt_dependencies/bcc/patches/: loader.cc  parser.yy  shared_table.cc  type_check.cc
opt_dependencies/elf/: CMakeLists.txt
opt_dependencies/elf/includes/: config.h
opt_dependencies/json11/: CMakeLists.txt
opt_dependencies/llvm_libraries/: CMakeLists.txt
opt_dependencies/zlib/: CMakeLists.txt
santa/: .platforms  CMakeLists.txt  README.md
santa/src/: extension.cpp  extension.h  main.cpp  santa.cpp  santa.h  santadecisionstable.cpp  santadecisionstable.h  santaeventstable.cpp  santaeventstable.h  santarulestable.cpp  santarulestable.h  utils.cpp  utils.h
src/: efigy.cpp  (+6 more)
(+98 files in other folders)
